Some Changes On Pictures and Logos

--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
     
 
     <!-- Favicon -->
-    <link href="img/ma_tab.ico" rel="icon">
+    <link href="img/logo/minilogoico.jpg" rel="icon">
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -70,7 +70,7 @@
 
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top p-0">
-        <img  width="200px" height="70px" src="img/MA.png" alt="Logo">
+        <img  width="140px" class="m-1" src="img/logo/logov1.png" alt="Logo">
         <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -140,13 +140,7 @@
     <div class="container-fluid page-header py-5 mb-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container text-center py-5">
             <h1 class="display-3 text-white mb-4 animated slideInDown">About Us</h1>
-            <nav aria-label="breadcrumb animated slideInDown">
-                <ol class="breadcrumb justify-content-center mb-0">
-                    <li class="breadcrumb-item"><a href="#">Home</a></li>
-                    <li class="breadcrumb-item"><a href="#">Pages</a></li>
-                    <li class="breadcrumb-item active" aria-current="page">About</li>
-                </ol>
-            </nav>
+            
         </div>
     </div>
     <!-- Page Header End -->
@@ -196,8 +190,8 @@
     <!-- About End -->
 
 
-    <!-- Facts Start -->
-    <div class="container-fluid facts my-5 py-5" data-parallax="scroll" data-image-src="img/carousel-2.jpg">
+    <!-- Facts Start carousel-2.jpg -->
+    <div class="container-fluid facts my-5 py-5" data-parallax="scroll" data-image-src="img/gallery/about.jpg">
         <div class="container py-5">
             <div class="row g-5">
                 <div class="col-sm-6 col-lg-3 text-center wow fadeIn" data-wow-delay="0.1s">
