--- a/blog.html
+++ b/blog.html
@@ -11,7 +11,7 @@
     
 
     <!-- Favicon -->
-    <link href="img/ma_tab.ico" rel="icon">
+    <link href="img/logo/minilogoico.jpg" rel="icon">
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -70,7 +70,7 @@
 
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top p-0">
-        <img  width="200px" height="70px" src="img/MA.png" alt="Logo">
+        <img  width="140px" class="m-1" src="img/logo/logov1.png" alt="Logo">
         <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -140,7 +140,7 @@
         <div class="container">
             <div class="row g-5 align-items-start">
                 <div class="col-lg-4 " >
-                        <img class="img-fluid" src="img/blog/amhara-agriculture.jpg"  alt="">
+                        <img class="img-fluid" src="img/gallery/sorghum.jpg"  alt="">
                 </div>
                 <div class="col-lg-8 ">
                     <h4>
@@ -177,7 +177,7 @@
                 <div class="col-lg-4 wow slideInUp" data-wow-delay="0.3s">
                     <div class="blog-item bg-light rounded overflow-hidden">
                         <div class="blog-img position-relative overflow-hidden">
-                            <img class="img-fluid" src="img/blog/soya-bean.jpg"  alt="">
+                            <img class="img-fluid" src="img/gallery/crop-mandela.jpg"  alt="">
                         </div>
                         <div class="p-4">
                             <h5 class="mb-3"> High-Quality Seeds for a Bountiful Harvest</h5>
@@ -193,7 +193,7 @@
                 ow slideInUp" data-wow-delay="0.3s">
                     <div class="blog-item bg-light rounded overflow-hidden">
                         <div class="blog-img position-relative overflow-hidden">
-                            <img class="img-fluid" src="img/blog/Tructor.jpg" alt="">
+                            <img class="img-fluid" src="img/gallery/mechanization.jpg" alt="">
                         </div>
                         <div class="p-4">
                             <h5 class="mb-3"> Machinery Rental: Enhancing Efficiency and Productivity</h5>
@@ -208,7 +208,7 @@
                 ow slideInUp" data-wow-delay="0.3s">
                     <div class="blog-item bg-light rounded overflow-hidden">
                         <div class="blog-img position-relative overflow-hidden">
-                            <img class="img-fluid" src="img/blog/amhara-agriculture.jpg" alt="">
+                            <img class="img-fluid" src="img/gallery/sorghum.jpg" alt="">
                         </div>
                         <div class="p-4">
                             <h5 class="mb-3">Collaborative Crop Production: Partnering for Success</h5>
