--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
     
 
     <!-- Favicon -->
-    <link href="img/ma_tab.ico" rel="icon">
+    <link href="img/logo/minilogoico.jpg" rel="icon">
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -70,7 +70,7 @@
 
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top p-0">
-        <img  width="200px" height="70px" src="img/MA.png" alt="Logo">
+        <img  width="140px" class="m-1" src="img/logo/logov1.png" alt="Logo">
         <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
         </button>
