--- a/crop-production.html
+++ b/crop-production.html
@@ -69,7 +69,7 @@
 
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top p-0">
-        <img  width="200px" height="70px" src="img/MA.png" alt="Logo">
+        <img  width="140px" class="m-1" src="img/logo/logov1.png" alt="Logo">
         <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -171,7 +171,7 @@
 
 
                 <div class="carousel-item active">
-                    <img class="w-100" src="img/crop-production.jpg" alt="Image">
+                    <img class="w-100" src="img/gallery/crop.jpg" alt="Image">
                     <div class="carousel-caption">
                         <div class="container">
                             <div class="row justify-content-center">
@@ -256,7 +256,7 @@
                     <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                         <div class="service-item rounded d-flex h-100">
                             <div class="service-img rounded">
-                                <img class="img-fluid" src="img/service-1.jpeg" alt="">
+                                <img class="img-fluid" src="img/gallery/crop.jpg" alt="">
                             </div>
                             <div class="service-text rounded p-5">
                                 <div class="btn-square rounded-circle mx-auto mb-3">
@@ -272,7 +272,7 @@
                     <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                         <div class="service-item rounded d-flex h-100">
                             <div class="service-img rounded">
-                                <img class="img-fluid" src="img/service-2.jpeg" alt="">
+                                <img class="img-fluid" src="img/gallery/sorghum.jpg" alt="">
                             </div>
                             <div class="service-text rounded p-5">
                                 <div class="btn-square rounded-circle mx-auto mb-3">
@@ -288,7 +288,7 @@
                     <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                         <div class="service-item rounded d-flex h-100">
                             <div class="service-img rounded">
-                                <img class="img-fluid" src="img/service-3.jpeg" alt="">
+                                <img class="img-fluid" src="img/gallery/megazen.jpg" alt="">
                             </div>
                             <div class="service-text rounded p-5">
                                 <div class="btn-square rounded-circle mx-auto mb-3">
