--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>MA - Business Group | Seed Enterprise |Mechanization Service | Crop Production | Agro Input Dealer |Mandela Temesgen</title>
+    <title>MA Business Group | Seed Enterprise |Mechanization Service | Crop Production | Agro Input Dealer |Mandela Temesgen</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
@@ -15,12 +15,14 @@
     <!-- Favicon -->
 
 
-    <link href="img/ma_tab.ico" rel="icon">
+    <link href="img/logo/minilogoico.jpg" rel="icon">
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Jost:wght@500;600;700&family=Open+Sans:wght@400;500&display=swap" rel="stylesheet">  
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Jost:wght@500;600;700&family=Open+Sans:wght@400;500&display=swap" rel="stylesheet">   -->
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
+
 
     <!-- Icon Font Stylesheet -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
@@ -75,7 +77,7 @@
 
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top p-0">
-        <img  width="200px" height="70px" src="img/MA.png" alt="Logo">
+        <img  width="140px" class="m-1" src="img/logo/logov1.png" alt="Logo">
         <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -145,6 +147,7 @@
     <div class="container-fluid p-0 wow fadeIn" data-wow-delay="0.1s">
         <div id="header-carousel" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
+
                 <div class="carousel-item active">
                     <img class="w-100"  src="img/seed-enterprise.png" alt="Image">
                     <div class="carousel-caption">
@@ -158,8 +161,6 @@
                         </div>
                     </div>
                 </div>
-
-
                 <div class="carousel-item">
                     <img class="w-100" src="img/mechanization3.jpg" alt="Image">
                     <div class="carousel-caption">
@@ -174,10 +175,8 @@
                         </div>
                     </div>
                 </div>
-
-
                 <div class="carousel-item">
-                    <img class="w-100" src="img/crop-production.jpg" alt="Image">
+                    <img class="w-100" src="img/gallery/crop.jpg" alt="Image">
                     <div class="carousel-caption">
                         <div class="container">
                             <div class="row justify-content-center">
@@ -190,7 +189,6 @@
                         </div>
                     </div>
                 </div>
-
                 <div class="carousel-item">
                     <img class="w-100" src="img/agro-dealers.jpg" alt="Image">
                     <div class="carousel-caption">
@@ -205,8 +203,6 @@
                         </div>
                     </div>
                 </div>
-
-
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#header-carousel"
                 data-bs-slide="prev">
@@ -457,7 +453,7 @@
                 <div class="col-lg-4 wow slideInUp" data-wow-delay="0.3s">
                     <div class="blog-item bg-light rounded overflow-hidden">
                         <div class="blog-img position-relative overflow-hidden">
-                            <img class="img-fluid" src="img/blog/soya-bean.jpg"  alt="">
+                            <img class="img-fluid" src="img/gallery/crop-mandela.jpg"  alt="">
                         </div>
                         <div class="p-4">
                             <h5 class="mb-3"> High-Quality Seeds for a Bountiful Harvest</h5>
@@ -473,7 +469,7 @@
                 ow slideInUp" data-wow-delay="0.3s">
                     <div class="blog-item bg-light rounded overflow-hidden">
                         <div class="blog-img position-relative overflow-hidden">
-                            <img class="img-fluid" src="img/blog/Tructor.jpg" alt="">
+                            <img class="img-fluid" src="img/gallery/mechanization.jpg" alt="">
                         </div>
                         <div class="p-4">
                             <h5 class="mb-3"> Machinery Rental: Enhancing Efficiency and Productivity</h5>
@@ -488,7 +484,7 @@
                 ow slideInUp" data-wow-delay="0.3s">
                     <div class="blog-item bg-light rounded overflow-hidden">
                         <div class="blog-img position-relative overflow-hidden">
-                            <img class="img-fluid" src="img/blog/amhara-agriculture.jpg" alt="">
+                            <img class="img-fluid" src="img/gallery/sorghum.jpg" alt="">
                         </div>
                         <div class="p-4">
                             <h5 class="mb-3">Collaborative Crop Production: Partnering for Success</h5>
