--- a/seed-interprise.html
+++ b/seed-interprise.html
@@ -10,7 +10,7 @@
     At Seed Enterprise, we specialize in seed multiplication to solve the longstanding issue of access to quality seeds for Ethiopian farmers. By working closely with research institutions and local agricultural offices, we ensure that the right seeds are available at the right time and place." name="description">
 
     <!-- Favicon -->
-    <link href="img/ma_tab.ico" rel="icon">
+    <link href="img/logo/minilogoico.jpg" rel="icon">
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -172,7 +172,7 @@
 
 
                 <div class="carousel-item">
-                    <img class="w-100" src="img/crop-production.jpg" alt="Image">
+                    <img class="w-100" src="img/gallery/crop.jpg" alt="Image">
                     <div class="carousel-caption">
                         <div class="container">
                             <div class="row justify-content-center">
@@ -295,7 +295,7 @@
                     <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                         <div class="service-item rounded d-flex h-100">
                             <div class="service-img rounded">
-                                <img class="img-fluid" src="img/service-1.jpeg" alt="">
+                                <img class="img-fluid" src="img/gallery/megazen.jpg" alt="">
                             </div>
                             <div class="service-text rounded p-5">
                                 <div class="btn-square rounded-circle mx-auto mb-3">
@@ -309,7 +309,7 @@
                     <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                         <div class="service-item rounded d-flex h-100">
                             <div class="service-img rounded">
-                                <img class="img-fluid" src="img/service-2.jpeg" alt="">
+                                <img class="img-fluid" src="img/gallery/seed_growing.jpg" alt="">
                             </div>
                             <div class="service-text rounded p-5">
                                 <div class="btn-square rounded-circle mx-auto mb-3">
@@ -324,7 +324,7 @@
                     <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                         <div class="service-item rounded d-flex h-100">
                             <div class="service-img rounded">
-                                <img class="img-fluid" src="img/service-3.jpeg" alt="">
+                                <img class="img-fluid" src="img/gallery/crop-mandela.jpg" alt="">
                             </div>
                             <div class="service-text rounded p-5">
                                 <div class="btn-square rounded-circle mx-auto mb-3">
