--- a/agro-input.html
+++ b/agro-input.html
@@ -10,7 +10,7 @@
     <meta name="keywords" content="mechanization services, seed enterprise ,crop production development ,agro input dealer,agriculture,farmer productivity,tructor,business group,Mandela Temesgen">
     
     <!-- Favicon -->
-    <link href="img/ma_tab.ico" rel="icon">
+    <link href="img/logo/minilogoico.jpg" rel="icon">
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -69,7 +69,7 @@
 
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top p-0">
-        <img  width="200px" height="70px" src="img/MA.png" alt="Logo">
+        <img  width="140px" class="m-1" src="img/logo/logov1.png" alt="Logo">
         <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -171,7 +171,7 @@
 
 
                 <div class="carousel-item ">
-                    <img class="w-100" src="img/crop-production.jpg" alt="Image">
+                    <img class="w-100" src="img/gallery/crop.jpg" alt="Image">
                     <div class="carousel-caption">
                         <div class="container">
                             <div class="row justify-content-center">
