--- a/mechanization.html
+++ b/mechanization.html
@@ -88,6 +88,7 @@
                                     <a href="seed-interprise" class="text-decoration-underline">
                                         <h5>Seed Enterprises</h5>
                                     </a>
+
                                     <ul class="list-unstyled">
                                         <li>Seed multiplication and distribution</li>
                                         <li>Collaboration with research centers for improved seed varieties.</li>
@@ -142,7 +143,7 @@
         <div id="header-carousel" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item ">
-                    <img class="w-100"  src="img/seed-enterprise.png" alt="Image">
+                    <img class="w-100"  src="img/seed.jpg" alt="Image">
                     <div class="carousel-caption">
                         <div class="container">
                             <div class="row justify-content-center">
