--- a/crop-production.html
+++ b/crop-production.html
@@ -140,7 +140,7 @@
         <div id="header-carousel" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item ">
-                    <img class="w-100"  src="img/seed-enterprise.png" alt="Image">
+                    <img class="w-100"  src="img/seed.jpg" alt="Image">
                     <div class="carousel-caption">
                         <div class="container">
                             <div class="row justify-content-center">
