--- a/seed-interprise.html
+++ b/seed-interprise.html
@@ -141,7 +141,7 @@
         <div id="header-carousel" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item  active">
-                    <img class="w-100"  src="img/seed-enterprise.png" alt="Image">
+                    <img class="w-100"  src="img/seed.jpg" alt="Image">
                     <div class="carousel-caption">
                         <div class="container">
                             <div class="row justify-content-center">
