--- a/contact.html
+++ b/contact.html
@@ -76,7 +76,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <div class="navbar-nav ms-auto p-4 p-lg-0">
-                <a href="/" class="nav-item nav-link active">Home</a>
+                <a href="/" class="nav-item nav-link ">Home</a>
                 <a href="about" class="nav-item nav-link">About</a>
                 <div class="nav-item dr">
                     <a href="#" class="nav-link" data-bs-toggle="dropdown">Services</a>
@@ -129,7 +129,7 @@
                 </div>
                 
                 <a href="blog" class="nav-item nav-link">Blog</a>
-                <a href="contact" class="nav-item nav-link">Contact Us</a>
+                <a href="contact" class="nav-item nav-link active">Contact Us</a>
             </div>
         </div>
     </nav>
@@ -208,7 +208,7 @@
             <div class="row g-5">
                 <div class="col-lg-4 col-md-6">
                     <h4 class="text-white mb-4">Our Office</h4>
-                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Hibir bldg.3rd floor, Gurd shola, AddisAbaba</p>
+                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Hibir Building, 3rd floor, Gurd shola, AddisAbaba</p>
                     <h6 class="mb-2 text-light">Regional Office</h6>
                     <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i> Fasil Sub-City, Gonder Woreda, BLIP, Amhara Region</p>
                     <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+2519 248 018 18
